* Fri Jun 01 2007 Damien Caliste <damien.caliste@cea.fr> 0.10
- Add a way to precisely choose the variables when defining a file. This
	has bringed some minor in the ETSF group API, for etsf_io_main_*
	and for etsf_io_data_*.
- Add the wavelet basis set as discussed in the IT9 meeting in San
	Sebastian in May 2007 (still in a draft for inclusion in
	specifications when 0.10 has been shipped).
	
* Fri May 11 2007 Damien Caliste <damien.caliste@cea.fr> 0.9
- complete all TODO occurances in the HTML pages.
- update all licence citation and remove all ABINIT occurance. Also add 2007 to the
  copyright and the name of the author for each part of the code.
- implement a copy_all_attribute routine in the low_level module. This routine
  is then used by the group level copy routines and the utils level merge routine
  to keep tracks of attributes in file merging. Several tests have been added
  in the low level pool to ensure this new copy routine.
- add a tutorial on the creation of non-ETSF variables, concurrently with ETSF
  ones.
- change the name of the wavedata group to basisdata for a better consistency.
	
* Fri Mar 09 2007 Damien Caliste <damien.caliste@cea.fr> 0.8
- add two more tutorials, one on the split usage and one on the high level routines.
- improve the documentation, especially the non robodoc pages.
- create a high level routine to check the validity of a file on the big domains
  the specifications deal with.
- create a high level routine to get the names of chemical species following the
  recommendations in the specifications.
- add two more actions to the etsf_io tool: the content and the check actions.
- fix some bugs in the build system and in the low level part.
	
* Wed Jan 17 2007 Damien Caliste <damien.caliste@cea.fr> 0.7
- add a new Fortran type to store the split definitions (e.g. my_kpoints...). This
  structure can be used when defining the variables on initialisation to set the
  splitted dimensions to the variables that need them.