@@ -26,6 +26,7 @@
     <a class="level2" href="tutorials/convert_to_xyz_f90.html">Converter and validity checks</a>
     <a class="level2" href="tutorials/MPI_output_of_a_density_f90.html">Use MPI and split capabilities</a>
     <a class="level2" href="tutorials/mix_ETSF_and_non_ETSF_f90.html">Mix ETSF and non-ETSF variables</a>
+    <a class="level2" href="tutorials/read_a_file_f90.html">Simple read of wavefunctions</a>
     <a href="utils/binary.html">Binary utility</a>
     <a class="level2" href="utils/binary.html#merge">Merge files</a>
     <a class="level2" href="utils/binary.html#content">Scan file contents</a>
@@ -64,6 +65,9 @@ are normalized for a file containing informations of an electronic calculation.<
       <li><a href="tutorials/read_write_sub_access_f90.html">Tutorial 2</a> introduced the group level routines and explain how to access only sub part of arrays. This sub access is possible when one array has a dimension on spin or k points. Then one can access data for one k point or spin at a time. This is controlled by some attributes in the concerned groups, called <code>&lt;short_var_name&gt;__[spin|kpoint]_access</code>. In this tutorial a wave-function file is created and the coefficients of wave-functions are written for one k point at a time.</li>
       <li><a href="tutorials/MPI_output_of_a_density_f90.html">Tutorial 4</a> shows how to use the split definitions as defined in the specifications to handle MPI computations. This tutorial creates a density file with a paralelisation on z planes.</li>
       <li><a href="tutorials/mix_ETSF_and_non_ETSF_f90.html">Tutorial 5</a> shows how to use the <code>etsf_io_&lt;group_name&gt;_put()</code> methods in the context of a concurrent list of ETSF and non-ETSF variables.</li>
+      <li><a href="tutorials/read_a_file_f90.html">Tutorial 6</a>
+shows how to use the <code>etsf_io_&lt;group_name&gt;_get()</code>
+methods in the simpliest way, also reading possible split definitions.</li>
     </ul>
     <h3>etsf_io_file &amp; etsf_io_tools (<em>libetsf_io_utils.a</em>)</h3>
     <p>This library contains two modules, <code>etsf_io_file</code> which is dedicated to high level actions on ETSF files (merge, check...) and <code>etsf_io_tools</code> which implements some not mandatory routines but convenient to handle data from ETSF files (get element names...).</p>
@@ -76,11 +80,17 @@ are normalized for a file containing informations of an electronic calculation.<
     <p><b>etsf_io_tools</b> is a not mandatory high level module. It contains some tools to do common high-level actions on ETSF data (see the API <a href="utils/etsf_io_tools_f90.html">page</a>):</p>
     <ul>
       <li>A method to retrieve the names of the element in a crystallographic file, whatever variables are present in the read ETSF file.</li>
-      <li><i>Not yet implemented</i> A method to transform the g point grids of all k points to a global list with an access array.</li>
+      <li>Two routines to handle the <i>use_time_reversal_at_gamma</i>
+attribute as defined in the 2.2 specifications.</li>
     </ul>
-    <p>There is one tutorial to illustrate usage of these modules:</p>
+    <p>The usage of these modules is illustrated by several tutorials:</p>
     <ul>
       <li><a href="convert_to_xyz_f90.html">Tutorial 3</a> shows how to use high level modules <a href="../utils/etsf_io_file_f90.html">etsf_io_file</a> and <a href="../utils/etsf_io_tools_f90.html">etsf_io_tools</a> to check the conformance of an input ETSF file on cristalographic specifications and then to read atomic coordinates and names to create a simple XYZ file.</li>
+      <li>Previously presented <a
+href="tutorials/read_write_sub_access_f90.html">Tutorial 2</a> has a
+line on how to write the <i>use_time_reversal_at_gamma</i> attribute
+(see <a href="tutorials/read_a_file_f90.html">Tutorial 6</a> for the
+read counterpart).</li>
     </ul>
     <h2>Attributes</h2>
     <p>The support for attributes as defined in the specifications is transparent for the user of the library:</p>
@@ -88,10 +98,17 @@ are normalized for a file containing informations of an electronic calculation.<
       <li>The units attribute is defined by default to "atomic units". When a file is read, all returned values are automatically converted to atomic units when required, thanks to the scale_to-atomic_units attribute. To get the true value from the file, one can give an optional argument to prevent to convert into atomic units, called <em>use_atomic_units</em> (logical).</li>
       <li>The k_dependent attribute is set to "yes" by default. When a variable with the k_dependent attribute is read, the value from the array is read except if the attribute is "no". Then the fallback value specified in the ETSF specifications is given.</li>
       <li>The symmorphic attribute is set to "no" automatically as soon as reduced_symmetry_translations is set to non zero values.</li>
+      <li>The time reversal symmetry at Gamma attribute is not handled
+automatically by the <code>libetsf_io.a</code> library, but two routines
+(get and set) have been written in the etsf_io_tools module (see
+<code>libetsf_io_utils.a</code>). These routines check the validity of
+the presence of the attribute and can write or read its contents
+easily (see <a
+href="tutorials/read_write_sub_access_f90.html">Tutorial 2</a> or <a href="tutorials/read_a_file_f90.html">Tutorial 6</a>).</li>
     </ul>
   </div> <!-- content -->
   <div id="footer">
-  <p>Manually maintained file, last edition 2007-05-11 by Damien Caliste.</p>
+  <p>Manually maintained file, last edition 2007-07-04 by Damien Caliste.</p>
   </div> <!-- footer -->
 </body>
 </html>
